# flipkart-scraper-api

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  flake.nix  index.js  index.md  package-lock.json  package.json  package.nix  sample-product.json  sample-search.json  sample.json  server.js  text.html  wrangler.toml
.github/workflows/: deploy.yml  main.yml  rust.yml
API/: product.js  property.js  search.js
src/: header.js  index.js  main.rs  product.rs  search.rs
worker/: script.js
