[package]
name = "flipkart-scraper-api"
description = "API to scrape search results and product details from Flipkart"
version = "5.0.0"
edition = "2021"
repository = "https://github.com/dvishal485/flipkart-scraper-api"
authors = ["dvishal485 <dvishal485@gmail.com>"]
license = "Apache-2.0"

[dependencies]
flipkart_scraper = { version = "0.5.0", features = ["fetch"] }
serde = "1.0.219"
serde_json = "1.0.140"
axum = { version = "0.8.4" }
tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread"] }
